# sysneuro

./: README.md  age.py  db.sqlite3  main.py  pyproject.toml
api/: router.py
backend/: settings.py  urls.py
backend/apps/assessments/: api.py  apps.py  models.py
backend/apps/assessments/migrations/: 0001_initial.py
backend/apps/patients/: api.py  apps.py  models.py
backend/apps/patients/migrations/: 0001_initial.py
backend/apps/wisc/: api.py  apps.py  models.py
backend/apps/wisc/migrations/: 0001_initial.py
backend/apps/wisc/services/: scoring.py
norms/wisc4/: idade_10-0-10-3.csv  idade_10-4-10-7.csv  idade_10-8-10-11.csv  idade_11-0-11-3.csv  idade_11-4-11-7.csv  idade_11-8-11-11.csv  idade_12-0-12-3.csv  idade_12-4-12-7.csv  idade_12-8-12-11.csv  idade_13-0-13-3.csv  idade_13-4-13-7.csv  idade_13-8-13-11.csv  idade_14-0-14-3.csv  idade_14-4-14-7.csv  idade_14-8-14-11.csv  idade_15-0-15-3.csv  idade_15-4-15-7.csv  idade_15-8-15-11.csv  idade_16-0-16-3.csv  idade_16-4-16-7.csv  idade_16-8-16-11.csv  idade_6-0-6-3.csv  idade_6-4-6-7.csv  idade_6-8-6-11.csv  idade_7-0-7-3.csv  idade_7-4-7-7.csv  idade_7-8-7-11.csv  idade_8-0-8-3.csv  idade_8-4-8-7.csv  idade_8-8-8-11.csv  idade_9-0-9-3.csv  idade_9-4-9-7.csv  idade_9-8-9-11.csv
